# test_cmake

./: CMakeLists.txt  README.md  build.bat  check.bat  check.sh
cmake/: MSVC_addons.cmake
lib1/: CMakeLists.txt
lib1/include/lib1/: Lib1.h
lib1/src/: Lib1.cpp
lib1/tests/: Lib1Tests.cpp
tools/: CMakeLists.txt  main_Lib1.cpp
